fixed solution box issue on iphone 6,8, some versions

--- a/src/css/tooltip.less
+++ b/src/css/tooltip.less
@@ -7,6 +7,9 @@ span.tooltip-style {
   // padding-left: 3px;
   font-size: 19.4px;
   cursor: pointer;
+  @media @mobile {
+    font-size: 18px;
+  }
 }
 
 b {
